--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,5 +12,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
+# Make Bluetooth stronger
+CONFIG_BT_CLTR_TX_PWR_PLUS_8=y
+
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
